# dbnt

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  architecture.md  llms.txt  prd.md  pyproject.toml  pyrightconfig.json  white.md  yellow.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
commands/: dbnt.md
docs/: ADAPTERS.md  PHILOSOPHY.md
hooks/: dbnt-learn.sh  dbnt-protocol.sh  hooks.json
skills/dbnt-feedback/: SKILL.md
src/dbnt/: __init__.py  __main__.py  cli.py  core.py  extract.py  learning.py  protocol.py
src/dbnt/adapters/: __init__.py  base.py  claude_code.py  generic.py
src/dbnt/signals/: __init__.py  detector.py
src/dbnt/storage/: __init__.py  rules.py
tests/: __init__.py  test_extract.py  test_learning.py  test_protocol.py  test_rules_storage.py  test_signals.py
